--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Week 1 - Jaren Lamprecht</title>
+    <title>WDD 131 - Week 1 - Jaren Lamprecht</title>
 
-    <link async rel="stylesheet" href="./styles/layout.css" />
+    <link rel="stylesheet" href="./styles/layout.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
           <a href="">Projects</a>
           <a href="">Services</a>
           <a href="">Contact Us</a>
-        </menu>
+        </nav>
     </header>
     <main>Main Content</main>
     <aside>Aside Content</aside>
