fix remaining audit

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,7 +7,7 @@
 
     <title>WDD 131 - Week 1 - Jaren Lamprecht</title>
 
-    <link rel="stylesheet" href="./styles/layout.css">
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 
 <body>
