--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Jaren Lamprecht - Home Page">
+    <meta name="author" content="Jaren Lamprecht">
+
+    <title>WDD 131 – Dynamic Web Fundamentals - Jaren Lamprecht</title>
+
+    <link rel="stylesheet" href="styles/base.css">
+    <script defer src="scripts/getdates.js"></script>
+</head>
+
+<body>
+    <header>
+        <h1>WDD 131 – Dynamic Web Fundamentals - Jaren Lamprecht</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/jaren-lamprecht-9a826526/">LinkedIn</a>
+            <a href="https://byupw.instructure.com/">Canvas</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/nt/luke/9?lang=eng&id=56#p56">Scripture</a>
+            <a href="">Final Project</a>
+        </nav>
+    </header>
+    <main>
+        <section class="card">
+            <h2>About Me</h2>
+            <article>
+                <div class="aboutme">
+                    <p>
+                        Lorem ipsum odor amet, consectetuer adipiscing elit. Cras nullam maecenas condimentum dolor torquent scelerisque bibendum maximus fermentum. Faucibus non ut phasellus sollicitudin massa. Quisque potenti id consequat nullam finibus ut.
+                    </p>
+                    <image src="images/jaren.jpg"></image>
+                </div>
+                <div class="aboututah">
+                    <h3>Utah, United States</h3>
+                    <div>
+                        <image src="images/utah.jpg"></image>
+                        <p>
+                            Lorem ipsum odor amet, consectetuer adipiscing elit. Faucibus ac massa pellentesque in neque in pulvinar curae. Integer rhoncus facilisi ad tempus dui magnis ultricies fames. Aptent molestie pretium, ipsum nulla taciti odio iaculis! Facilisi elit lectus felis elementum donec facilisis. Cursus vitae lacus fringilla et duis interdum habitasse at.
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="card">
+            <h2>Web Dev Resources</h2>
+            <article>
+                <ul>
+                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                    <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/">MDN</a></li>
+                    <li><a href="https://stackoverflow.com/questions">Stack Overflow</a></li>
+                </ul>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>
+            <span>©</span><span id="currentyear"></span><span>Jaren Lamprecht - Utah, USA</span>
+        </p>
+        <p id="lastModified">
+        </p>
+    </footer>
+</body>
+
+</html>
