--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>WDD 131 – Dynamic Web Fundamentals - Jaren Lamprecht</title>
 
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script defer src="scripts/getdates.js"></script>
 </head>
 
@@ -31,12 +34,12 @@
                     <p>
                         Lorem ipsum odor amet, consectetuer adipiscing elit. Cras nullam maecenas condimentum dolor torquent scelerisque bibendum maximus fermentum. Faucibus non ut phasellus sollicitudin massa. Quisque potenti id consequat nullam finibus ut.
                     </p>
-                    <image src="images/jaren.jpg"></image>
+                    <img alt="portrait" src="images/jaren.jpg" />
                 </div>
                 <div class="aboututah">
                     <h3>Utah, United States</h3>
                     <div>
-                        <image src="images/utah.jpg"></image>
+                        <img alt="flag" src="images/utah.jpg" />
                         <p>
                             Lorem ipsum odor amet, consectetuer adipiscing elit. Faucibus ac massa pellentesque in neque in pulvinar curae. Integer rhoncus facilisi ad tempus dui magnis ultricies fames. Aptent molestie pretium, ipsum nulla taciti odio iaculis! Facilisi elit lectus felis elementum donec facilisis. Cursus vitae lacus fringilla et duis interdum habitasse at.
                         </p>
