--- a/form.html
+++ b/form.html
@@ -35,29 +35,29 @@
                     <input type="radio" name="rating" id="star-1" value="1" required>
                 </div>
                 <div class="star">
-                    <label for="star-1">&star;&star;</label>
+                    <label for="star-2">&star;&star;</label>
                     <input type="radio" name="rating" id="star-2" value="2" required>
                 </div>
                 <div class="star">
 
-                    <label for="star-1">&star;&star;&star;</label>
+                    <label for="star-3">&star;&star;&star;</label>
                     <input type="radio" name="rating" id="star-3" value="3" required>
                 </div>
                 <div class="star">
-                    <label for="star-1">&star;&star;&star;&star;</label>
+                    <label for="star-4">&star;&star;&star;&star;</label>
                     <input type="radio" name="rating" id="star-4" value="4" required>
                 </div>
                 <div class="star">
-                    <label for="star-1">&star;&star;&star;&star;&star;</label>
+                    <label for="star-5">&star;&star;&star;&star;&star;</label>
                     <input type="radio" name="rating" id="star-5" value="5" required>
                 </div>
             </fieldset>
             <label for="date">Date of Installation</label>
             <input type="date" id="date" name="date" required>
             <label for="features">
-                <div>Which features did you find useful in the product?</div>
-                <div class="parenthetical">(Check all that apply)</div>
+                Which features did you find useful in the product?
             </label>
+            <div class="parenthetical">(Check all that apply)</div>
             <fieldset id="features">
                 <div class="check">
                     <input type="checkbox" id="durability" name="durability">
@@ -75,8 +75,6 @@
                     <input type="checkbox" id="design" name="design">
                     <label for="design">Design</label>
                 </div>
-                
-
             </fieldset>
             <label for="review">Written Review <span class="parenthetical">(Optional)</span></label>
             <textarea id="review" name="review"></textarea>
